OpenAI 추가, env 설정, text입력 추가

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
   </head>
 
   <body>
+    <div
+      id="footer"
+      style="position: absolute; bottom: 1em; left: 3vw; display: flex"
+    >
+      <textarea style="height: 3em; width: 80vw" id="sentence"></textarea>
+      <button style="width: 4em" id="send">send</button>
+    </div>
     <!-- Import maps polyfill -->
     <!-- Remove this when import maps will be widely supported -->
     <script
