--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
   <body>
     <div
       id="footer"
-      style="position: absolute; bottom: 1em; left: 3vw; display: flex"
+      style="position: absolute; bottom: 1em; left: 3vw; display: flex; gap: 0.5em"
     >
       <textarea style="height: 3em; width: 80vw" id="sentence"></textarea>
       <button style="width: 4em" id="send">send</button>
+      <button style="width: 4em" id="listen">listen</button>
     </div>
     <!-- Import maps polyfill -->
     <!-- Remove this when import maps will be widely supported -->
